--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Greenden</title>
     <script src="
 https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/lib/index.min.js
 "></script>
