this is version 2.0

--- a/index.html
+++ b/index.html
@@ -150,25 +150,25 @@ https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
       <h1>Best Seller</h1>
     </div>
     <!-- section five -->
-    <div class="grid grid-cols-2 m-10 gap-10 md:grid-cols-4 ">
+    <div class="grid grid-cols-2 mt-10 md:grid-cols-4 ">
   
-      <div class="text-center transform hover:-translate-y-2 hover:shadow-3xl">
-        <img src="./img/img5.png" />
-        <h3 class="text-center">Rose plant</h3>
+      <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+        <img src="./img/img5.png" class="inline"/>
+        <h3 >Rose plant</h3>
         <p>₹50</p>
       </div>
       <div class="text-center transform hover:-translate-y-2 hover:shadow-3xl">
-        <img src="./img/img4.jpg" alt="" />
+        <img src="./img/img4.jpg" alt=""class="inline" />
         <h3>Rose plant</h3>
         <p>₹50</p>
       </div>
       <div class="text-center transform hover:-translate-y-2 hover:shadow-3xl">
-        <img src="./img/img3.jpg" alt="" />
+        <img src="./img/img3.jpg" alt="" class="inline"/>
         <h3>Rose plant</h3>
         <p>₹50</p>
       </div>
       <div class="text-center transform hover:-translate-y-2 hover:shadow-3xl">
-        <img src="./img/img6.png" alt="" />
+        <img src="./img/img6.png" alt="" class="inline"/>
         <h3>Rose plant</h3>
         <p>₹50</p>
       </div>
