--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@ https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
 <body>
     <!-- navigation bar -->
     <nav
-      class="bg-green-100 flex items-center justify-between p-3 shadow-2xl sticky top-0"
+      class="bg-green-100 flex items-center justify-between p-3 shadow-2xl z-10  sticky top-0"
     >
       <h1 class="text-3xl">Greenden</h1>
       <ul class="flex gap-5">
@@ -53,47 +53,47 @@ https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
     </nav>
     <div class="text-center">
         <h1 class="font-bold text-4xl mt-6 mb-4">Our Products</h1>
-        <input type=" text" placeholder="Search for a products..." class=" border border-black p-2" style="width: 80%;"/>
+        <input type=" text" placeholder="Search for a products..." class=" border border-black rounded p-2" style="width: 80%;"/>
     </div>
      <!-- product -->
     <div class="grid grid-cols-2 m-10 gap-5 md:grid-cols-4  ">
-        <div class="">
-            <img src="./img/bestseller_1.jpg" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_1.jpg" alt="" class="inline">
             <p class="">Rose plant</p>
             <p>₹20</p>
         </div> 
-        <div>
-            <img src="./img/bestseller_2.jpg" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  "  class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_2.jpg" alt=""class="inline">
             <p>Rose plant</p>
             <p>₹20</p>
         </div>
-        <div>
-            <img src="./img/bestseller_3.png" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_3.png" alt=""class="inline">
             <p>Rose plant</p>
             <p>₹20</p>
         </div>
-        <div>
-            <img src="./img/bestseller_4.png" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_4.png" alt=""class="inline">
             <p>Rose plant</p>
             <p>₹20</p>
         </div>
-        <div>
-            <img src="./img/bestseller_3.png" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_3.png" alt=""class="inline">
             <p>Rose plant</p>
             <p>₹20</p>
         </div>
-        <div>
-            <img src="./img/bestseller_4.png" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_4.png" alt=""class="inline">
             <p>Rose plant</p>
             <p>₹20</p>
         </div>
-        <div>
-             <img src="./img/bestseller_1.jpg" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+             <img src="./img/bestseller_1.jpg" alt=""class="inline">
              <p>Rose plant</p>
             <p>₹20</p>
         </div>
-        <div>
-            <img src="./img/bestseller_2.jpg" alt="">
+        <div class="text-center transform hover:-translate-y-2 hover:shadow-4xl  ">
+            <img src="./img/bestseller_2.jpg" alt=""class="inline">
             <p>Rose plant</p>
             <p>₹20</p>
         </div>
